# LORA-tools

./: Pull images 2.py  README.md  Rule34 puller.py  beta pulled.py  camie_tagger_dataset_builder.py  cleanup.py  collum output.py  crop clean up orginal.py  crop.py  danbooru json to highdream formats.py  danbooru2024 puller.py  datasetbuilder.py  import pyarrow.py  sizesorter.py  tag cleaner.py  tags for training.py
Deepone/: pyproject.toml  setup.cfg  setup.py
Image edits/: crop.py  image_json_editor.py
Pullers/: Dambooru2024_local.py  Dambooru2024_local_puller.patch  Dambooru2024_local_puller.py  Dambooru2024_local_puller.py.orig  Dambooru2024_local_puller_old.py  Rule34 puller.py  Untitled-1.py  Untitled-1.txt  cleanup.py  dambooru_manifest_tarmajor.patch  danbooru2024 puller.py  danbooru2024_puller.py  debug_enhanced.py  examine_json_dict.py  find_real_id_column.py  fix-issues-BJW-PTP-MCM-TI-PR-v2.patch  fix-issues-BJW-PTP-MCM-TI-PR-v3.cleaned-plus.patch  fix-issues-BJW-PTP-MCM-TI-PR.patch  fix_danbooru_puller.patch  fix_extraction.patch  quick_json_test.py  test.fixed.patch  test.p0.patch  test.patch  test_id_mapping.py
Training/: Camie‑Tagger training.py  Data reviewer.py  Delta of data.py
camie_distill/: flash_stub.py  setup.cfg
database/: datasetbuilder.py  import pyarrow.py
file sorting/: Clean orginal if left from crop.py  cleanup.py  json_to_csv.py  sizesorter.py
