[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "camie_distill"
version = "0.1.0"                    # <- string, as required by the spec
description = "Student‑teacher distillation toolkit for Camie‑Tagger"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.1",
    "timm==0.9.12",
    "safetensors>=0.5.3",
    "deepspeed>=0.16.3,<0.17",
]