# ──────────────────────────────────────────────────────────────
# setup.cfg  –  Declarative build / packaging configuration
# ──────────────────────────────────────────────────────────────
[metadata]
name = camie_distill
version = 0.1.0            # ↑ bump when you tag a release
author = Your Name
author_email = you@example.com
url = https://github.com/yourname/camie_distill
description = Student‑teacher distillation toolkit for Camie‑Tagger
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Intended Audience :: Science/Research
keywords = deep-learning, vision, multilabel, distillation, huggingface

[options]
# ––– core –
python_requires = >=3.9
packages = find:
include_package_data = True

# ––– runtime dependencies –
install_requires =
    torch>=2.1                # includes torchvision if installed from PyPI
    safetensors
    timm==0.9.12
    deepspeed==0.14.1
    huggingface_hub>=0.23
    pillow
    numpy
    tqdm
    pandas

[options.packages.find]
where = .
exclude =
    tests*
    docs*
    examples*

[options.entry_points]
# Adds two CLI shortcuts after `pip install -e .`
console_scripts =
    camie-build-dataset = camie_distill.dataset_builder:build_dataset
    camie-train-student = camie_distill.train_student:main

# ──────────────────────────────────────────────────────────────
# Development / linting extras (optional)
# ──────────────────────────────────────────────────────────────
[flake8]
max-line-length = 120
extend-ignore = E203, W503

[tool:pytest]
addopts = -ra -q
testpaths = tests
